<resources>
    <string name="app_name" translatable="false">ISSR Mobile</string>
    <!--  Citizen or individual  -->
    <string name="citizen">Citizen</string>
    <string name="company">Legal person</string>
    <string name="intro">Introduction</string>
    <string name="request_id">Request ID</string>
    <string name="search">Search</string>
    <string name="enter_search_parameters">Enter search parameters</string>
    <string name="ico">Company ID</string>
    <string name="scan_id_card">Scan from ID card</string>
    <string name="personal_id">Personal ID</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="radio_button_state_covid">Covid-19 (§54e)</string>
    <string name="radio_button_state_other">Other</string>
    <string name="insert_request_id">Insert request ID for search</string>
    <string name="you_are_in_screen">You are in screen you have selected.</string>
    <string name="detail_of_request">Detail of request</string>
    <string name="staus_of_request">Request status</string>
    <string name="processed_period">Processed period</string>
    <string name="required_fields_empty">Required fields are not filled.</string>
    <string name="invalid_legal_person_id">Legal person ID is not valid. Valid ID has 6 or 8 numbers.</string>
    <string name="duration">Duration</string>
    <string name="unexpected_state">Unexpected state. Please contact support.</string>
    <string name="request_status">Status:</string>
    <string name="overview_for_requests">Requests overview</string>
    <string name="put_barcode_inside">Place a barcode in the viewfinder rectangle to scan it.</string>
    <string name="light_off">Light off</string>
    <string name="light_on">Light on</string>
    <string name="unknown_barcode">Unsupported barcode type.</string>
    <string name="scan_from_barcode">Scan from barcode</string>
    <string name="unable_to_use_functionality">Unable to use functionality without permission.</string>
</resources>
