<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CitizenActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:indeterminateDrawable="@drawable/loading_bar"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:src="@drawable/main_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rootTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_search_parameters"
        app:layout_constraintBottom_toTopOf="@+id/radio_button_selector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_logo"
        app:layout_constraintVertical_bias="0.29000002" />

    <RadioGroup
        android:id="@+id/radio_button_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100sp"
        app:layout_constraintBottom_toTopOf="@+id/center_linear_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rootTextView"
        app:layout_constraintVertical_bias="0.19">

        <RadioButton
            android:id="@+id/covid_state1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_button_state_covid" />

        <RadioButton
            android:id="@+id/covid_state2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_state_other" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/center_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10sp"
        android:background="@drawable/text_edit_style"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/search_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_button_selector">


        <Button
            android:id="@+id/scan_id_card_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5sp"
            android:text="@string/scan_id_card" />

        <LinearLayout
            android:id="@+id/linear_first_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10sp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linear_button_layout"
            tools:layout_editor_absoluteX="10dp"
            tools:layout_editor_absoluteY="410dp">

            <TextView
                android:id="@+id/text_view_first_name"
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/first_name" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:layout_weight="50"
                android:background="@drawable/text_edit_style"
                android:inputType="textCapSentences"
                android:maxLength="30"
                android:textAppearance="@style/TextViewApperanceSecondaryNormal"
                android:padding="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_last_name_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10sp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linear_first_name_layout"
            tools:layout_editor_absoluteX="10dp">

            <TextView
                android:id="@+id/text_view_last_name"
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/last_name" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:layout_weight="50"
                android:background="@drawable/text_edit_style"
                android:inputType="textCapSentences"
                android:maxLength="30"
                android:padding="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_personal_id_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10sp"
            android:orientation="horizontal"
            android:textAppearance="@style/TextViewApperanceSecondaryNormal"
            app:layout_constraintTop_toBottomOf="@+id/linear_last_name_layout"
            tools:layout_editor_absoluteX="10dp">

            <TextView
                android:id="@+id/text_view_personal_id"
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/personal_id" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_personal_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:layout_weight="50"
                android:background="@drawable/text_edit_style"
                android:textAppearance="@style/TextViewApperanceSecondaryNormal"
                android:inputType="number"
                android:maxLength="11"
                android:padding="10dp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/center_linear_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>