<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DetailActivity">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:src="@drawable/main_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rootTextView"
        style="@style/TextViewAppearanceExtraLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/detail_of_request"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_logo" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10sp"
        android:layout_marginTop="40dp"
        android:background="@drawable/input_area"
        android:minHeight="300dp"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rootTextView">

        <LinearLayout
            android:id="@+id/center_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10sp"
            android:layout_marginTop="2dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                style="@style/TextViewAppearanceLargeBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:text="@string/request_id" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/linear_button_layout">

                <View
                    android:layout_width="60sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/request_id_text_view"
                    style="@style/TextViewAppearanceSecondaryLarge"
                    android:layout_width="300sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:textAlignment="textEnd" />

            </LinearLayout>

            <TextView
                style="@style/TextViewAppearanceLargeBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:text="@string/duration" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/linear_button_layout">

                <View
                    android:layout_width="60sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/duration_text_view"
                    style="@style/TextViewAppearanceSecondaryLarge"
                    android:layout_width="300sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:textAlignment="textEnd" />

            </LinearLayout>

            <TextView
                style="@style/TextViewAppearanceLargeBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:text="@string/staus_of_request" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/linear_button_layout">

                <View
                    android:layout_width="60sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/request_status_text_view"
                    style="@style/TextViewAppearanceSecondaryLarge"
                    android:layout_width="300sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:textAlignment="textEnd" />

            </LinearLayout>

            <TextView
                style="@style/TextViewAppearanceLargeBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:text="@string/processed_period" />

            <ListView
                android:id="@+id/process_period_list_view"
                android:layout_width="match_parent"
                android:layout_height="200sp"
                android:layout_gravity="end"
                android:divider="@null"
                android:dividerHeight="2dp"
                android:minHeight="300sp"
                android:padding="3dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>